# fastspring-keygen-integration-server

./: .gitignore  Cargo.toml  package_lambda.sh
keygen-cli/: Cargo.toml
keygen-cli/src/: main.rs
src/: fastspring.rs  keygen.rs  lib.rs  main.rs  patreon.rs  util.rs
