[package]
name = "fastspring_keygen_integration"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"


[dependencies]
aws_lambda_events = "0.2.4"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
http = "0.1.17"
url = "1.7.2"
lambda_runtime = "0.2.1"
lambda_http = "0.1.1"
log = "0.4.6"
env_logger = "0.6.1"
dotenv = "0.14.1"
lazy_static = "1.3.0"
hmac-sha1 = "0.1.3"
hmac-sha256 = "0.1.1"
rand = "0.6.5"
base64 = "0.10.1"
hex = "0.3.2"
md5 = "0.6.1"
reqwest = { version="0.9.17", default_features=false, features=["rustls-tls"]}
clap = "2.33.0"
clipboard = "0.5.0"
