[package]
name = "fastspring_keygen_integration"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"


[dependencies]
aws_lambda_events = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"
url = "2.1"
lambda_runtime = "0.2.1"
lambda_http = "0.1.1"
log = "0.4"
env_logger = "0.7"
dotenv ="0.15"
lazy_static = "1.4"
hmac-sha1 = "0.1"
hmac-sha256 = "0.1"
rand = "0.7"
base64 = "0.12"
hex = "0.4"
md5 = "0.7"
reqwest = { version="0.10", default_features=false, features=["rustls-tls", "blocking", "json"]}
