[package]
name = "keygen-cli"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
clipboard = "0.5.0"
fastspring_keygen_integration = {path = ".."}
dotenv = "0.14.1"
